--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,14 +7,19 @@ body {
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
-    font-family: 'Lato';
+    font-family: 'Garamond';
 }
 
-#topnav {
-    border-bottom: 1px solid #253759;
+header {
+    z-index: 999;
 }
 
-/* from Bulma */
+#home-content-container {
+    background-color: #e7d4bc;
+    height: 1000px;
+}
+
+/* Taken from the Boutique Ado Project which sourced this code from Bulma */
 .icon {
     align-items: center;
     display: inline-flex;
@@ -74,6 +79,17 @@ body {
     }
 
     .header-container {
-        padding-top: 164px;
+        padding-top: 129px;
+    }
+}
+
+/* home page content for smaller devices */
+@media (max-width: 767px) {
+    .header-container {
+        padding-top: 65px;
+    }
+
+    body {
+        font-size: .7rem;
     }
 }
