Add more css and styling to homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,10 +11,20 @@
 
 {% block content %}
     <div id="home-content-container" >
-        <div id="" class="container">
-            <div class="row">
-                
-                <h1 class="col-12 text-center"><span class="">Welcome to</span><br>Markscheme</h1>
+        <div id="" class="container h-100">
+            <div id="home-row-1" class="row">
+                <h1 id="home-title" class="col-12 col-lg-4 text-left text-black thin my-auto">Welcome to<br><span class="text-big thin font-playfair logo-font">Markscheme</span></h1>
+                <div id="home-image" class="col-12 col-lg-8">
+                </div>
+            </div>
+            <div id="tiles-div" class="row">
+                <div class="col-12 col-lg-4 home-tiles">
+                </div>
+                <div class="col-12 col-lg-4 home-tiles">
+                </div>
+                <div class="col-12 col-lg-4 home-tiles">
+                </div>
+
             </div>
         </div>
     </div>
