Finish basic styling for home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,18 +13,28 @@
     <div id="home-content-container" >
         <div id="" class="container h-100">
             <div id="home-row-1" class="row">
-                <h1 id="home-title" class="col-12 col-lg-4 text-left text-black thin my-auto">Welcome to<br><span class="text-big thin font-playfair logo-font">Markscheme</span></h1>
-                <div id="home-image" class="col-12 col-lg-8">
+                <div class="col-12 col-lg-4" >
+                    <h1 id="home-title" class=" text-left text-black thin my-auto">Welcome to<br><span class="text-big thin font-playfair logo-font">Markscheme</span></h1>
+                    <div class="row mt-4 p-0">
+                        <div class="col-6 home-content-buttons ms-0">
+                            <h4 class="text-center">
+                                <a class="my-auto btn-black btn shop-now-button rounded-0 py-3" href="">
+                                    Attend a Workshop
+                                </a>
+                            </h4>
+                        </div>
+                        <div class="col-6 home-content-buttons">
+                            <h4 class="text-center">
+                                <a class="my-auto btn-black btn shop-now-button rounded-0 py-3" href="">
+                                    Get Study Resources
+                                </a>
+                            </h4>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div id="tiles-div" class="row">
-                <div class="col-12 col-lg-4 home-tiles">
+                
+                <div id="home-image" class="col-12 col-lg-8 mt-auto">
                 </div>
-                <div class="col-12 col-lg-4 home-tiles">
-                </div>
-                <div class="col-12 col-lg-4 home-tiles">
-                </div>
-
             </div>
         </div>
     </div>
