--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,31 +1,31 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="{% url 'home' %}" id="all-products-link"  aria-haspopup="true" aria-expanded="false">
                 Home
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="{% url 'about' %}" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
                 About
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="#" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
                 Workshops
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="#" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
                 Store
             </a>
         </li>
 
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="#" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
                 Blog
             </a>
         </li>
