--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -13,7 +13,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font nav-link text-black mr-5" href="{% url 'workshops' %}" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
                 Workshops
             </a>
         </li>
