--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
                     <div class="row mt-4 p-0">
                         <div class="col-6 home-content-buttons ms-0">
                             <h4 class="text-center">
-                                <a class="my-auto btn-black btn shop-now-button rounded-0 py-3" href="">
+                                <a class="my-auto btn-black btn shop-now-button rounded-0 py-3" href="{% url 'workshops' %}">
                                     Attend a Workshop
                                 </a>
                             </h4>
