Add workshop and digital product pages and page details

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="col-6 home-content-buttons">
                             <h4 class="text-center">
-                                <a class="my-auto btn-black btn shop-now-button rounded-0 py-3" href="">
+                                <a class="my-auto btn-black btn shop-now-button rounded-0 py-3" href="{% url 'digital_products' %}">
                                     Get Study Resources
                                 </a>
                             </h4>
