--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -19,8 +19,8 @@
         </li>
 
         <li class="nav-item">
-            <a class="logo-font nav-link text-black mr-5" href="#" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
-                Store
+            <a class="logo-font nav-link text-black mr-5" href="{% url 'digital_products' %}" id="clothing-link"  aria-haspopup="true" aria-expanded="false">
+                Digital Products
             </a>
         </li>
 
