--- a/products/templates/products/workshops.html
+++ b/products/templates/products/workshops.html
@@ -26,11 +26,11 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
                                 {% if workshop.image %}
-                                <a href="">
+                                <a href="{% url 'workshop_detail' workshop.slug %}">
                                     <img class="card-img-top img-fluid card-img" object-fit="cover" src="{{ workshop.image.url }}" alt="{{ product.name }}">
                                 </a>
                                 {% else %}
-                                <a href="">
+                                <a href="{% url 'workshop_detail' workshop.slug %}">
                                     <img class="card-img-top img-fluid card-img" object-fit="cover" height="15px" src="/media/no_image.jpg" alt="{{ product.name }}">
                                 </a>
                                 {% endif %}
