--- a/static/css/base.css
+++ b/static/css/base.css
@@ -118,6 +118,12 @@ footer {
     color: white;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important; /* use important to override link colors for <a> elements */
+    border: 1px solid black;
+}
+
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
@@ -154,6 +160,12 @@ footer {
     object-fit: cover;
 }
 
+.bag-img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+}
+
 .card-smaller-text {
     font-size: .8rem;
 }
@@ -162,6 +174,10 @@ footer {
     max-height: 60vh;
     object-fit: cover;
     object-position: center center;
+}
+
+.remove-item {
+    cursor: pointer;
 }
 
 /* -------------------------------- Media Queries */
