Add data caching to webhook handler

--- a/products/templates/products/digital_product_detail.html
+++ b/products/templates/products/digital_product_detail.html
@@ -66,7 +66,7 @@
                             
                             {% if in_bag %}
                             <div class="col-12">
-                                <p class="bg-pink text-white rounded p-3">This item is already in your bag. If you wish to reserve a spot for another person, create an account for that person and then purchase spot. </p>
+                                <p class="bg-pink text-white rounded p-3">This item is already in your bag. You only need to purchase it once and then you have access for life!</p>
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
