Update checkout page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -44,6 +44,10 @@ footer {
     background-color: #A6635D !important;
 }
 
+.text-pink {
+    color: #A6635D !important;
+}
+
 .thin {
     font-weight: 300;
 }
