--- a/static/css/base.css
+++ b/static/css/base.css
@@ -188,6 +188,66 @@ footer {
     cursor: pointer;
 }
 
+/* Allauth form formatting | Taken from Boutique Ado 
+and modified for this project */
+
+.allauth-form-inner-content p {
+    margin-top: 1.5rem; /* mt-4 */
+    color: #6c757d; /* text-secondary */
+}
+
+.allauth-form-inner-content input {
+    border-color: #000;
+    border-radius: 0;
+}
+
+.allauth-form-inner-content label:not([for='id_remember']) {
+    display: none;
+}
+
+.allauth-form-inner-content input::placeholder {
+    color: #aab7c4;
+}
+
+.allauth-form-inner-content button,
+.allauth-form-inner-content input[type='submit'] {
+	/* btn */
+	display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 200;
+    font-family: 'Playfair Display', serif;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: #A6635D;
+    border: 1px solid #A6635D;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.allauth-form-inner-content button:hover,
+.allauth-form-inner-content input[type='submit']:hover {	
+	color: #fff;
+    background-color: #253759;
+    border-color: #253759;
+    text-transform: uppercase;
+    font-weight: 200;
+}
+
+.allauth-form-inner-content a {
+	color: #4C76A6; /* text-info */
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
