Add ability to add workshops and digital products from the front end

--- a/products/templates/products/workshop_detail.html
+++ b/products/templates/products/workshop_detail.html
@@ -49,7 +49,7 @@
                             {% endfor %}
                                 </span>
                     </p>
-                    <p class="font-georgia mt-1 mb-0"><span class="font-weight-bold">Available Places:</span> {{ workshop.available_slots }} out of {{ workshop.total_slots }}</p>
+                    <p class="font-georgia mt-1 mb-0"><span class="font-weight-bold">Available Places:</span> {{ workshop.total_slots }} out of {{ workshop.total_slots }}</p>
                     <p class="font-georgia font-weight-bold mt-5 mb-2 text-uppercase">Description:</p>
                     <hr class="m-0">
                     <p class="font-georgia">{{ workshop.description }}</p>
