--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,8 @@
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
-                                    <a href="" class="dropdown-item">Product Management</a>
+                                    <a href="{% url 'add_workshop' %}" class="dropdown-item">Add Workshop</a>
+                                    <a href="{% url 'add_digital_product' %}" class="dropdown-item">Add Digital Product</a>
                                 {% endif %}
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
