--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -40,7 +40,11 @@ project and has been modified to fit this project -->
                         {% for item in bag_items %}
                             <tr>
                                 <td class="p-3 w-25">
-                                    <img class="rounded bag-img" src="{{ item.product.image.url }}">
+                                    {% if item.product.image %}
+                                    <img class="img-fluid rounded" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+                                    {% else %}
+                                    <img class="img-fluid rounded" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                                    {% endif %}
                                 </td>
                                 <td class="py-3">
                                     <p class="my-0"><strong>{{ item.product.name|upper }}</strong></p>
