--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -19,3 +19,33 @@
 #id_default_country option:first-child {
     color: #aab7c4;
 }
+
+/* The below accordian CSS came from https://www.w3schools.com/howto/howto_js_accordion.asp 
+It has been modified here for this project */
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+    background-color: #A6635D;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: 1px solid #ede5db;
+    outline: none;
+    transition: 0.4s;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .accordion:hover {
+    background-color: #253759;
+  }
+  
+  /* Style the accordion panel. Note: hidden by default */
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+  }
+  
