--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,12 @@
                         <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
+                                {% if request.user.is_superuser %}
+                                <p class="my-0">Manage Site</p>
+                                {% else %}
                                 <p class="my-0">My Account</p>
+                                {% endif %}
+                                
                             </div>
                         </a>
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
