--- a/products/templates/products/workshop_detail.html
+++ b/products/templates/products/workshop_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load mathfilters %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -49,7 +50,7 @@
                             {% endfor %}
                                 </span>
                     </p>
-                    <p class="font-georgia mt-1 mb-0"><span class="font-weight-bold">Available Places:</span> {{ workshop.total_slots }} out of {{ workshop.total_slots }}</p>
+                    <p class="font-georgia mt-1 mb-0"><span class="font-weight-bold">Available Places:</span> {{ workshop.total_slots | sub:workshop.attendance.count }} spots left out of {{ workshop.total_slots }} total</p>
                     <p class="font-georgia font-weight-bold mt-5 mb-2 text-uppercase">Description:</p>
                     <hr class="m-0">
                     <p class="font-georgia">{{ workshop.description }}</p>
