--- a/products/templates/products/workshops.html
+++ b/products/templates/products/workshops.html
@@ -46,6 +46,12 @@
                                         </div>
                                     </div>
                                 </div>
+                                {% if request.user.is_superuser %}
+                                    <small class="text-center text-uppercase font-georgia mb-3">
+                                        <a class="text-blue" href="{% url 'edit_workshop' workshop.slug %}">Edit</a> | 
+                                        <a class="text-pink" href="{% url 'delete_product' workshop.slug %}">Delete</a>
+                                    </small>
+                                {% endif %}
                             </div>
                         </div>
                         {% if forloop.counter|divisibleby:1 %}
