--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -62,6 +62,19 @@
                                         </div>
                                     </div>
                                 </div>
+                                {% if request.user.is_superuser %}
+                                    {% if product.workshop %}
+                                    <small class="text-center text-uppercase font-georgia mb-3">
+                                        <a class="text-blue" href="{% url 'edit_workshop' product.slug %}">Edit</a> | 
+                                        <a class="text-pink" href="{% url 'delete_product' product.slug %}">Delete</a>
+                                    </small>
+                                    {% else %}
+                                        <small class="text-center text-uppercase font-georgia mb-3">
+                                            <a class="text-blue" href="{% url 'edit_digital_product' product.slug %}">Edit</a> | 
+                                            <a class="text-pink" href="{% url 'delete_product' product.slug %}">Delete</a>
+                                        </small>
+                                    {% endif %}
+                                {% endif %}
                             </div>
                         </div>
                         {% if forloop.counter|divisibleby:1 %}
