--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -23,6 +23,13 @@
       </div>
     </div>
   </div>
+  <div class="col-12 home-content-buttons">
+    <h4 class="text-center">
+        <a class="my-auto btn-black btn shop-now-button rounded-0 py-3" href="{% url 'staff' %}">
+            Meet our Staff
+        </a>
+    </h4>
+</div>
 
 
 {% endblock %}
